<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_ingredients"
        android:title="@string/add_ingredients"
        android:icon="@drawable/add"
        app:iconTint="@color/my_blue"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_delete_ingredients"
        android:title="@string/delete_all"
        android:icon="@drawable/delete_bucket"
        app:iconTint="@color/red"
        app:showAsAction="ifRoom"
       />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings"
        app:iconTint="@color/theme_primary"
        app:showAsAction="ifRoom"
        />

</menu>